# expirotron

./: Dockerfile  expirotron.py  pyproject.toml
deploy/: expirotron-cronjob.yaml
