[tool.poetry]
name = "expirotron"
version = "0.1.0"
description = ""
authors = ["Brandon Burnett <gentoolicious@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
deluge-client = "^1.9.0"
deluge = "^2.0.3"
ipython = "^7.15.0"
ipdb = "^0.13.2"
tabulate = "^0.8.7"
black = "^19.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
